--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -46,7 +46,7 @@
     {
         "files": ["*.spec.ts"],
         "rules": {
-            "no-console": "warn",
+            "no-console": "off",
             "import/no-extraneous-dependencies": "off"
         }
     }
